[gd_scene load_steps=18 format=3 uid="uid://dii2mwatui4bc"]

[ext_resource type="Script" path="res://Tablet/Level.gd" id="1_71apm"]
[ext_resource type="Script" path="res://Tablet/DrawArea.gd" id="2_e4nei"]
[ext_resource type="FontFile" uid="uid://cmfhcqnjxi2dk" path="res://Art/SpectralSC-BoldItalic.ttf" id="2_li5js"]
[ext_resource type="PackedScene" uid="uid://bhi7bucq4cdmf" path="res://Tablet/drawing_line.tscn" id="3_g50de"]
[ext_resource type="FontFile" uid="uid://dwidlnm4oscog" path="res://Art/SpectralSC-SemiBold.ttf" id="3_itavd"]
[ext_resource type="PackedScene" uid="uid://c3417xby0vqsn" path="res://Tablet/drawing_line_hint.tscn" id="6_ejwsa"]
[ext_resource type="AudioStream" uid="uid://dlu61amvldo6v" path="res://Audio/chisel.wav" id="7_7roso"]
[ext_resource type="AudioStream" uid="uid://cl7y1wgdiwhvm" path="res://Audio/win.wav" id="8_quicq"]

[sub_resource type="LabelSettings" id="LabelSettings_5htio"]
resource_local_to_scene = true
line_spacing = 2.08165e-12
font = ExtResource("2_li5js")
font_size = 236
font_color = Color(0.254902, 0.254902, 0.254902, 1)

[sub_resource type="LabelSettings" id="LabelSettings_k7wfb"]
resource_local_to_scene = true
line_spacing = 2.08165e-12
font = ExtResource("3_itavd")
font_size = 150
font_color = Color(0.254902, 0.254902, 0.254902, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yap3f"]
size = Vector2(441.111, 612.222)

[sub_resource type="Gradient" id="Gradient_lbnbc"]
offsets = PackedFloat32Array(0, 0.287293, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_a7wen"]
colors = PackedColorArray(0.286157, 0.286157, 0.286157, 1, 0.493211, 0.493211, 0.493211, 1)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_on5wv"]
playback_mode = 1
random_pitch = 1.5
random_volume_offset_db = 5.0
streams_count = 1
stream_0/stream = ExtResource("7_7roso")
stream_0/weight = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vkylh"]
bg_color = Color(0.780392, 0.780392, 0.780392, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.32549, 0.32549, 0.32549, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qqwdj"]
bg_color = Color(0.517647, 0.517647, 0.517647, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omg0m"]
bg_color = Color(0.266667, 0.266667, 0.266667, 1)

[node name="Level" type="Node2D"]
script = ExtResource("1_71apm")
complete_shadow_color = Color(0.941176, 0.831373, 0.215686, 1)
complete_text_color = Color(1, 0.964706, 0.0627451, 1)
complete_line_color = Color(0.678431, 0.054902, 0.0431373, 1)

[node name="WinAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_quicq")
volume_db = -7.02

[node name="Shadow" type="Polygon2D" parent="."]
position = Vector2(293.137, 394.698)
scale = Vector2(0.992834, 0.938725)
color = Color(0.509804, 0.509804, 0.509804, 1)
antialiased = true
polygon = PackedVector2Array(-235, -256, -191, -281, -147, -291, -112, -298, -64, -306, -14, -307, 21, -315, 76, -309, 119, -301, 159, -308, 190, -306, 226, -288, 247, -262, 259, -224, 256, -164, 255, -114, 240, -60, 250, -17, 252, 21, 245, 61, 247, 98, 250, 150, 258, 185, 244, 220, 255, 263, 241, 316, 249, 380, 251, 429, -234, 431, -234, 382, -244, 356, -236, 293, -253, 262, -237, 212, -242, 165, -260, 132, -240, 81, -254, 51, -248, 1, -256, -33, -247, -71, -237, -113, -257, -164, -240, -191)

[node name="Rock" type="Polygon2D" parent="."]
position = Vector2(301.258, 409.63)
scale = Vector2(0.9, 0.9)
color = Color(0.752941, 0.752941, 0.752941, 1)
antialiased = true
polygon = PackedVector2Array(-235, -256, -191, -281, -147, -291, -112, -298, -64, -306, -14, -307, 21, -315, 76, -309, 119, -301, 159, -308, 190, -306, 226, -288, 247, -262, 259, -224, 256, -164, 255, -114, 240, -60, 250, -17, 252, 21, 245, 61, 247, 98, 250, 150, 258, 185, 244, 220, 255, 263, 241, 316, 249, 380, 251, 429, -234, 431, -234, 382, -244, 356, -236, 293, -253, 262, -237, 212, -242, 165, -260, 132, -240, 81, -254, 51, -248, 1, -256, -33, -247, -71, -237, -113, -257, -164, -240, -191)

[node name="LevelLabel" type="Label" parent="."]
offset_left = 17.0
offset_top = 128.0
offset_right = 2345.0
offset_bottom = 488.0
scale = Vector2(0.25, 0.25)
pivot_offset = Vector2(2.08165e-12, 2.08165e-12)
text = "~XXXIII~"
label_settings = SubResource("LabelSettings_5htio")
horizontal_alignment = 1

[node name="PhraseLabel" type="Label" parent="."]
offset_left = 19.0
offset_top = 189.0
offset_right = 2339.0
offset_bottom = 418.0
scale = Vector2(0.25, 0.25)
text = "KATAHPODESBEETAH"
label_settings = SubResource("LabelSettings_k7wfb")
horizontal_alignment = 1

[node name="DrawArea" type="Area2D" parent="."]
position = Vector2(299.137, 526)
scale = Vector2(0.9, 0.9)
script = ExtResource("2_e4nei")
min_dist = 16.0
line_scn = ExtResource("3_g50de")
hint_line_scn = ExtResource("6_ejwsa")

[node name="CollisionShape2D" type="CollisionShape2D" parent="DrawArea"]
position = Vector2(5, -12.7778)
shape = SubResource("RectangleShape2D_yap3f")

[node name="CPUParticles2D" type="CPUParticles2D" parent="DrawArea"]
emitting = false
amount = 40
lifetime = 1.2
lifetime_randomness = 0.3
direction = Vector2(2.08165e-12, -1)
spread = 42.65
gravity = Vector2(2.08165e-12, 670)
initial_velocity_min = 528.38
initial_velocity_max = 921.41
scale_amount_min = 1.49
scale_amount_max = 2.79
color_ramp = SubResource("Gradient_lbnbc")
color_initial_ramp = SubResource("Gradient_a7wen")

[node name="DrawAudio" type="AudioStreamPlayer" parent="DrawArea"]
stream = SubResource("AudioStreamRandomizer_on5wv")
volume_db = -8.83

[node name="CameraTarget" type="Node2D" parent="."]
position = Vector2(300, 400)

[node name="PrevButton" type="Button" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 80.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vkylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqwdj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omg0m")
text = "<"

[node name="NextButton" type="Button" parent="."]
offset_left = 520.0
offset_top = 16.0
offset_right = 584.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vkylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqwdj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omg0m")
text = ">"

[node name="LevelsButton" type="Button" parent="."]
offset_left = 321.0
offset_top = 16.0
offset_right = 453.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vkylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqwdj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omg0m")
text = "LEVELS"

[node name="ClearButton" type="Button" parent="."]
offset_left = 178.0
offset_top = 16.0
offset_right = 298.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_constants/outline_size = 12
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_vkylh")
theme_override_styles/hover = SubResource("StyleBoxFlat_qqwdj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_omg0m")
text = "CLEAR"

[connection signal="input_event" from="DrawArea" to="DrawArea" method="_on_input_event"]
[connection signal="button_down" from="PrevButton" to="." method="to_prev_level"]
[connection signal="button_down" from="NextButton" to="." method="to_next_level"]
[connection signal="button_down" from="LevelsButton" to="." method="to_levels"]
[connection signal="button_down" from="ClearButton" to="DrawArea" method="clear_drawing"]
